fix: z-index manquant

--- a/components/Builder/builder.module.scss
+++ b/components/Builder/builder.module.scss
@@ -182,6 +182,7 @@
 .element__wrap{
   position: relative;
   height: 100%;
+  z-index: 10;
 }
 
 .element__widget{
